# pc_lgo

./: .gitignore  README.md  pyproject.toml
src/open_pc_lgo/: __init__.py  audit.py  core.py  models.py  optim.py  physics.py
src/open_pc_lgo/benchmarks/: __init__.py  capacity.py  conic.py  ev_charging.py  rastrigin.py
src/open_pc_lgo/experiments/: __init__.py  compare_methods.py  run_benchmark.py
tests/: test_audit.py  test_capacity_benchmark.py  test_conic_benchmark.py  test_ev_charging_benchmark.py  test_rastrigin_benchmark.py
