[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OPEN-pc_lgo"
version = "0.1.0"
description = "Projection-Clean Learning-Guided Optimization benchmark package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "torch>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
open-pc-lgo-run = "open_pc_lgo.experiments.run_benchmark:main"
open-pc-lgo-compare = "open_pc_lgo.experiments.compare_methods:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
